--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base{
+    :root {
+        --azul-principal: #0C41FF;
+    }
+    
     @font-face{
         font-family: 'Inter';
         src: url('./assets/fonts/Inter-Regular.ttf') format('truetype');
@@ -10,6 +14,8 @@
         font-style: normal;
     }
     
+    
+
     html {
         scroll-behavior: smooth;
         scroll-padding-top: 0;
